Fix #829 (linebreaks in messages)

--- a/static/sass/usermessages.scss
+++ b/static/sass/usermessages.scss
@@ -133,6 +133,8 @@
                 
                 p{
                     color:grey;
+                    margin-top: 0.5em;
+                    margin-bottom:0.5em;
                 }
                 
                 .avatar{
